# drt

sketch_bot_description/: CMakeLists.txt  drt.rviz  package.xml  setup.cfg  setup.py  temp.txt
sketch_bot_description/launch/: display.launch.py
sketch_bot_description/rviz/: sketch_bot.rviz
sketch_bot_description/urdf/: sketch_bot.urdf.xacro
sketch_bot_moveit_config/: CMakeLists.txt  ReadMe.txt  package.xml
sketch_bot_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
sketch_bot_moveit_config/launch/: demo.launch.py
sketch_bot_moveit_config/srdf/: sketch_bot.srdf
